# deepseek-sdk

./: Cargo.toml  LICENSE  README.md
src/: balance.rs  balence.rs  error.rs  lib.rs  models.rs
src/chat/: client.rs  mod.rs
src/completion/: chat.rs  fim.rs  mod.rs
