[package]
name = "deepseek-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Tan Kimzeg <tankimzeg@qq.com>"]
description = "DeepSeek API client for Rust."
homepage = "https://github.com/TanKimzeg/deepseek-sdk"
repository = "https://github.com/TanKimzeg/deepseek-sdk"
license = "MIT"
readme = "README.md"
keywords = ["deepseek", "openai", "ai"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
derive_builder = "0.20.2"
futures-util = "0.3.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
